docs/upbound-provider-aws/1.6/cloudfront/v1beta1/fieldLevelEncryptionConfig.md
---
permalink: /upbound-provider-aws/1.6/cloudfront/v1beta1/fieldLevelEncryptionConfig/
---

# cloudfront.v1beta1.fieldLevelEncryptionConfig

"FieldLevelEncryptionConfig is the Schema for the FieldLevelEncryptionConfigs API. Provides a CloudFront Field-level Encryption Config resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withComment(comment)`](#fn-specforproviderwithcomment)
    * [`fn withContentTypeProfileConfig(contentTypeProfileConfig)`](#fn-specforproviderwithcontenttypeprofileconfig)
    * [`fn withContentTypeProfileConfigMixin(contentTypeProfileConfig)`](#fn-specforproviderwithcontenttypeprofileconfigmixin)
    * [`fn withQueryArgProfileConfig(queryArgProfileConfig)`](#fn-specforproviderwithqueryargprofileconfig)
    * [`fn withQueryArgProfileConfigMixin(queryArgProfileConfig)`](#fn-specforproviderwithqueryargprofileconfigmixin)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`obj spec.forProvider.contentTypeProfileConfig`](#obj-specforprovidercontenttypeprofileconfig)
      * [`fn withContentTypeProfiles(contentTypeProfiles)`](#fn-specforprovidercontenttypeprofileconfigwithcontenttypeprofiles)
      * [`fn withContentTypeProfilesMixin(contentTypeProfiles)`](#fn-specforprovidercontenttypeprofileconfigwithcontenttypeprofilesmixin)
      * [`fn withForwardWhenContentTypeIsUnknown(forwardWhenContentTypeIsUnknown)`](#fn-specforprovidercontenttypeprofileconfigwithforwardwhencontenttypeisunknown)
      * [`obj spec.forProvider.contentTypeProfileConfig.contentTypeProfiles`](#obj-specforprovidercontenttypeprofileconfigcontenttypeprofiles)
        * [`fn withItems(items)`](#fn-specforprovidercontenttypeprofileconfigcontenttypeprofileswithitems)
        * [`fn withItemsMixin(items)`](#fn-specforprovidercontenttypeprofileconfigcontenttypeprofileswithitemsmixin)
        * [`obj spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.items`](#obj-specforprovidercontenttypeprofileconfigcontenttypeprofilesitems)
          * [`fn withContentType(contentType)`](#fn-specforprovidercontenttypeprofileconfigcontenttypeprofilesitemswithcontenttype)
          * [`fn withFormat(format)`](#fn-specforprovidercontenttypeprofileconfigcontenttypeprofilesitemswithformat)
          * [`fn withProfileId(profileId)`](#fn-specforprovidercontenttypeprofileconfigcontenttypeprofilesitemswithprofileid)
    * [`obj spec.forProvider.queryArgProfileConfig`](#obj-specforproviderqueryargprofileconfig)
      * [`fn withForwardWhenQueryArgProfileIsUnknown(forwardWhenQueryArgProfileIsUnknown)`](#fn-specforproviderqueryargprofileconfigwithforwardwhenqueryargprofileisunknown)
      * [`fn withQueryArgProfiles(queryArgProfiles)`](#fn-specforproviderqueryargprofileconfigwithqueryargprofiles)
      * [`fn withQueryArgProfilesMixin(queryArgProfiles)`](#fn-specforproviderqueryargprofileconfigwithqueryargprofilesmixin)
      * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles`](#obj-specforproviderqueryargprofileconfigqueryargprofiles)
        * [`fn withItems(items)`](#fn-specforproviderqueryargprofileconfigqueryargprofileswithitems)
        * [`fn withItemsMixin(items)`](#fn-specforproviderqueryargprofileconfigqueryargprofileswithitemsmixin)
        * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items`](#obj-specforproviderqueryargprofileconfigqueryargprofilesitems)
          * [`fn withProfileId(profileId)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemswithprofileid)
          * [`fn withQueryArg(queryArg)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemswithqueryarg)
          * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef`](#obj-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidref)
            * [`fn withName(name)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefwithname)
            * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy`](#obj-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicy)
              * [`fn withResolution(resolution)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicywithresolution)
              * [`fn withResolve(resolve)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicywithresolve)
          * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector`](#obj-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselector)
            * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchcontrollerref)
            * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchlabels)
            * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchlabelsmixin)
            * [`obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy`](#obj-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicy)
              * [`fn withResolution(resolution)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicywithresolution)
              * [`fn withResolve(resolve)`](#fn-specforproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withComment(comment)`](#fn-specinitproviderwithcomment)
    * [`fn withContentTypeProfileConfig(contentTypeProfileConfig)`](#fn-specinitproviderwithcontenttypeprofileconfig)
    * [`fn withContentTypeProfileConfigMixin(contentTypeProfileConfig)`](#fn-specinitproviderwithcontenttypeprofileconfigmixin)
    * [`fn withQueryArgProfileConfig(queryArgProfileConfig)`](#fn-specinitproviderwithqueryargprofileconfig)
    * [`fn withQueryArgProfileConfigMixin(queryArgProfileConfig)`](#fn-specinitproviderwithqueryargprofileconfigmixin)
    * [`obj spec.initProvider.contentTypeProfileConfig`](#obj-specinitprovidercontenttypeprofileconfig)
      * [`fn withContentTypeProfiles(contentTypeProfiles)`](#fn-specinitprovidercontenttypeprofileconfigwithcontenttypeprofiles)
      * [`fn withContentTypeProfilesMixin(contentTypeProfiles)`](#fn-specinitprovidercontenttypeprofileconfigwithcontenttypeprofilesmixin)
      * [`fn withForwardWhenContentTypeIsUnknown(forwardWhenContentTypeIsUnknown)`](#fn-specinitprovidercontenttypeprofileconfigwithforwardwhencontenttypeisunknown)
      * [`obj spec.initProvider.contentTypeProfileConfig.contentTypeProfiles`](#obj-specinitprovidercontenttypeprofileconfigcontenttypeprofiles)
        * [`fn withItems(items)`](#fn-specinitprovidercontenttypeprofileconfigcontenttypeprofileswithitems)
        * [`fn withItemsMixin(items)`](#fn-specinitprovidercontenttypeprofileconfigcontenttypeprofileswithitemsmixin)
        * [`obj spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.items`](#obj-specinitprovidercontenttypeprofileconfigcontenttypeprofilesitems)
          * [`fn withContentType(contentType)`](#fn-specinitprovidercontenttypeprofileconfigcontenttypeprofilesitemswithcontenttype)
          * [`fn withFormat(format)`](#fn-specinitprovidercontenttypeprofileconfigcontenttypeprofilesitemswithformat)
          * [`fn withProfileId(profileId)`](#fn-specinitprovidercontenttypeprofileconfigcontenttypeprofilesitemswithprofileid)
    * [`obj spec.initProvider.queryArgProfileConfig`](#obj-specinitproviderqueryargprofileconfig)
      * [`fn withForwardWhenQueryArgProfileIsUnknown(forwardWhenQueryArgProfileIsUnknown)`](#fn-specinitproviderqueryargprofileconfigwithforwardwhenqueryargprofileisunknown)
      * [`fn withQueryArgProfiles(queryArgProfiles)`](#fn-specinitproviderqueryargprofileconfigwithqueryargprofiles)
      * [`fn withQueryArgProfilesMixin(queryArgProfiles)`](#fn-specinitproviderqueryargprofileconfigwithqueryargprofilesmixin)
      * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles`](#obj-specinitproviderqueryargprofileconfigqueryargprofiles)
        * [`fn withItems(items)`](#fn-specinitproviderqueryargprofileconfigqueryargprofileswithitems)
        * [`fn withItemsMixin(items)`](#fn-specinitproviderqueryargprofileconfigqueryargprofileswithitemsmixin)
        * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items`](#obj-specinitproviderqueryargprofileconfigqueryargprofilesitems)
          * [`fn withProfileId(profileId)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemswithprofileid)
          * [`fn withQueryArg(queryArg)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemswithqueryarg)
          * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef`](#obj-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidref)
            * [`fn withName(name)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefwithname)
            * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy`](#obj-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicy)
              * [`fn withResolution(resolution)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicywithresolution)
              * [`fn withResolve(resolve)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidrefpolicywithresolve)
          * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector`](#obj-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselector)
            * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchcontrollerref)
            * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchlabels)
            * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorwithmatchlabelsmixin)
            * [`obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy`](#obj-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicy)
              * [`fn withResolution(resolution)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicywithresolution)
              * [`fn withResolve(resolve)`](#fn-specinitproviderqueryargprofileconfigqueryargprofilesitemsprofileidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of FieldLevelEncryptionConfig

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"FieldLevelEncryptionConfigSpec defines the desired state of FieldLevelEncryptionConfig"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withComment

```ts
withComment(comment)
```

"An optional comment about the Field Level Encryption Config."

### fn spec.forProvider.withContentTypeProfileConfig

```ts
withContentTypeProfileConfig(contentTypeProfileConfig)
```

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

### fn spec.forProvider.withContentTypeProfileConfigMixin

```ts
withContentTypeProfileConfigMixin(contentTypeProfileConfig)
```

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withQueryArgProfileConfig

```ts
withQueryArgProfileConfig(queryArgProfileConfig)
```

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

### fn spec.forProvider.withQueryArgProfileConfigMixin

```ts
withQueryArgProfileConfigMixin(queryArgProfileConfig)
```

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

## obj spec.forProvider.contentTypeProfileConfig

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

### fn spec.forProvider.contentTypeProfileConfig.withContentTypeProfiles

```ts
withContentTypeProfiles(contentTypeProfiles)
```

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

### fn spec.forProvider.contentTypeProfileConfig.withContentTypeProfilesMixin

```ts
withContentTypeProfilesMixin(contentTypeProfiles)
```

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.contentTypeProfileConfig.withForwardWhenContentTypeIsUnknown

```ts
withForwardWhenContentTypeIsUnknown(forwardWhenContentTypeIsUnknown)
```

"specifies what to do when an unknown content type is provided for the profile. If true, content is forwarded without being encrypted when the content type is unknown. If false (the default), an error is returned when the content type is unknown."

## obj spec.forProvider.contentTypeProfileConfig.contentTypeProfiles

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

### fn spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.withItems

```ts
withItems(items)
```



### fn spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.items



### fn spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.items.withContentType

```ts
withContentType(contentType)
```

"he content type for a field-level encryption content type-profile mapping. Valid value is application/x-www-form-urlencoded."

### fn spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.items.withFormat

```ts
withFormat(format)
```

"The format for a field-level encryption content type-profile mapping. Valid value is URLEncoded."

### fn spec.forProvider.contentTypeProfileConfig.contentTypeProfiles.items.withProfileId

```ts
withProfileId(profileId)
```

"The profile ID for a field-level encryption content type-profile mapping."

## obj spec.forProvider.queryArgProfileConfig

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

### fn spec.forProvider.queryArgProfileConfig.withForwardWhenQueryArgProfileIsUnknown

```ts
withForwardWhenQueryArgProfileIsUnknown(forwardWhenQueryArgProfileIsUnknown)
```

"Flag to set if you want a request to be forwarded to the origin even if the profile specified by the field-level encryption query argument, fle-profile, is unknown."

### fn spec.forProvider.queryArgProfileConfig.withQueryArgProfiles

```ts
withQueryArgProfiles(queryArgProfiles)
```

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

### fn spec.forProvider.queryArgProfileConfig.withQueryArgProfilesMixin

```ts
withQueryArgProfilesMixin(queryArgProfiles)
```

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.withItems

```ts
withItems(items)
```



### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items



### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.withProfileId

```ts
withProfileId(profileId)
```

"The profile ID for a field-level encryption content type-profile mapping."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.withQueryArg

```ts
withQueryArg(queryArg)
```

"Query argument for field-level encryption query argument-profile mapping."

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef

"Reference to a FieldLevelEncryptionProfile in cloudfront to populate profileId."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy

"Policies for referencing."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector

"Selector for a FieldLevelEncryptionProfile in cloudfront to populate profileId."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy

"Policies for selection."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withComment

```ts
withComment(comment)
```

"An optional comment about the Field Level Encryption Config."

### fn spec.initProvider.withContentTypeProfileConfig

```ts
withContentTypeProfileConfig(contentTypeProfileConfig)
```

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

### fn spec.initProvider.withContentTypeProfileConfigMixin

```ts
withContentTypeProfileConfigMixin(contentTypeProfileConfig)
```

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withQueryArgProfileConfig

```ts
withQueryArgProfileConfig(queryArgProfileConfig)
```

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

### fn spec.initProvider.withQueryArgProfileConfigMixin

```ts
withQueryArgProfileConfigMixin(queryArgProfileConfig)
```

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.contentTypeProfileConfig

"Content Type Profile Config specifies when to forward content if a content type isn't recognized and profiles to use as by default in a request if a query argument doesn't specify a profile to use."

### fn spec.initProvider.contentTypeProfileConfig.withContentTypeProfiles

```ts
withContentTypeProfiles(contentTypeProfiles)
```

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

### fn spec.initProvider.contentTypeProfileConfig.withContentTypeProfilesMixin

```ts
withContentTypeProfilesMixin(contentTypeProfiles)
```

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.contentTypeProfileConfig.withForwardWhenContentTypeIsUnknown

```ts
withForwardWhenContentTypeIsUnknown(forwardWhenContentTypeIsUnknown)
```

"specifies what to do when an unknown content type is provided for the profile. If true, content is forwarded without being encrypted when the content type is unknown. If false (the default), an error is returned when the content type is unknown."

## obj spec.initProvider.contentTypeProfileConfig.contentTypeProfiles

"Object that contains an attribute items that contains the list of configurations for a field-level encryption content type-profile. See Content Type Profile."

### fn spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.withItems

```ts
withItems(items)
```



### fn spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.items



### fn spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.items.withContentType

```ts
withContentType(contentType)
```

"he content type for a field-level encryption content type-profile mapping. Valid value is application/x-www-form-urlencoded."

### fn spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.items.withFormat

```ts
withFormat(format)
```

"The format for a field-level encryption content type-profile mapping. Valid value is URLEncoded."

### fn spec.initProvider.contentTypeProfileConfig.contentTypeProfiles.items.withProfileId

```ts
withProfileId(profileId)
```

"The profile ID for a field-level encryption content type-profile mapping."

## obj spec.initProvider.queryArgProfileConfig

"Query Arg Profile Config that specifies when to forward content if a profile isn't found and the profile that can be provided as a query argument in a request."

### fn spec.initProvider.queryArgProfileConfig.withForwardWhenQueryArgProfileIsUnknown

```ts
withForwardWhenQueryArgProfileIsUnknown(forwardWhenQueryArgProfileIsUnknown)
```

"Flag to set if you want a request to be forwarded to the origin even if the profile specified by the field-level encryption query argument, fle-profile, is unknown."

### fn spec.initProvider.queryArgProfileConfig.withQueryArgProfiles

```ts
withQueryArgProfiles(queryArgProfiles)
```

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

### fn spec.initProvider.queryArgProfileConfig.withQueryArgProfilesMixin

```ts
withQueryArgProfilesMixin(queryArgProfiles)
```

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles

"Object that contains an attribute items that contains the list ofrofiles specified for query argument-profile mapping for field-level encryption. see Query Arg Profile."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.withItems

```ts
withItems(items)
```



### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items



### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.withProfileId

```ts
withProfileId(profileId)
```

"The profile ID for a field-level encryption content type-profile mapping."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.withQueryArg

```ts
withQueryArg(queryArg)
```

"Query argument for field-level encryption query argument-profile mapping."

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef

"Reference to a FieldLevelEncryptionProfile in cloudfront to populate profileId."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy

"Policies for referencing."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector

"Selector for a FieldLevelEncryptionProfile in cloudfront to populate profileId."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy

"Policies for selection."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.queryArgProfileConfig.queryArgProfiles.items.profileIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."